project_3/project_3.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
04:43:16 **** Build of configuration Debug for project RayTrace ****
make all 
'Building file: ../src/bvh.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/bvh.d" -MT"src/bvh.o" -c -o "src/bvh.o" "../src/bvh.c"
'Finished building: ../src/bvh.c'
' '
'Building file: ../src/camera.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/camera.d" -MT"src/camera.o" -c -o "src/camera.o" "../src/camera.c"
In file included from ../src/camera.c:1:0:
../src/camera.h:11:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:12:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:13:17: error: field 'c2w' has incomplete type
     struct mat3 c2w;
                 ^~~
../src/camera.h:21:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:22:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:30:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes);
                                                                 ^~~~
                                                                 _Bool
../src/camera.c:10:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes) {
                                                                 ^~~~
                                                                 _Bool
make: *** [src/subdir.mk:29: src/camera.o] Error 1
04:45:05 **** Incremental Build of configuration Debug for project RayTrace ****
make all 
'Building file: ../src/camera.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/camera.d" -MT"src/camera.o" -c -o "src/camera.o" "../src/camera.c"
In file included from ../src/camera.c:1:0:
../src/camera.h:14:4: error: unknown type name 'mfloat_t'
    mfloat_t x;
    ^~~~~~~~
../src/camera.h:15:4: error: unknown type name 'mfloat_t'
    mfloat_t y;
    ^~~~~~~~
../src/camera.h:16:4: error: unknown type name 'mfloat_t'
    mfloat_t z;
    ^~~~~~~~
../src/camera.h:18:3: error: unknown type name 'mfloat_t'
   mfloat_t v[VEC3_SIZE];
   ^~~~~~~~
../src/camera.h:18:14: error: 'VEC3_SIZE' undeclared here (not in a function); did you mean '_T_SIZE'?
   mfloat_t v[VEC3_SIZE];
              ^~~~~~~~~
              _T_SIZE
../src/camera.h:31:17: error: field 'c2w' has incomplete type
     struct mat3 c2w;
                 ^~~
../src/camera.h:48:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes);
                                                                 ^~~~
                                                                 _Bool
../src/camera.c:10:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes) {
                                                                 ^~~~
                                                                 _Bool
make: *** [src/subdir.mk:29: src/camera.o] Error 1
04:46:16 **** Incremental Build of configuration Debug for project RayTrace ****
make all 
'Building file: ../src/camera.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/camera.d" -MT"src/camera.o" -c -o "src/camera.o" "../src/camera.c"
In file included from ../src/camera.c:1:0:
../src/camera.h:10:9: error: unknown type name 'MATHC_FLOATING_POINT_TYPE'
 typedef MATHC_FLOATING_POINT_TYPE mfloat_t;
         ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/camera.h:22:14: error: 'VEC3_SIZE' undeclared here (not in a function); did you mean '_T_SIZE'?
   mfloat_t v[VEC3_SIZE];
              ^~~~~~~~~
              _T_SIZE
../src/camera.h:35:17: error: field 'c2w' has incomplete type
     struct mat3 c2w;
                 ^~~
../src/camera.h:52:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes);
                                                                 ^~~~
                                                                 _Bool
../src/camera.c:10:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes) {
                                                                 ^~~~
                                                                 _Bool
make: *** [src/subdir.mk:29: src/camera.o] Error 1
04:47:47 **** Incremental Build of configuration Debug for project RayTrace ****
make all 
'Building file: ../src/camera.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/camera.d" -MT"src/camera.o" -c -o "src/camera.o" "../src/camera.c"
In file included from ../src/camera.c:1:0:
../src/camera.h:10:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:11:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:12:17: error: field 'c2w' has incomplete type
     struct mat3 c2w;
                 ^~~
../src/camera.h:20:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:21:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:29:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes);
                                                                 ^~~~
                                                                 _Bool
../src/camera.c:10:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes) {
                                                                 ^~~~
                                                                 _Bool
make: *** [src/subdir.mk:29: src/camera.o] Error 1
04:48:09 **** Incremental Build of configuration Debug for project RayTrace ****
make all 
'Building file: ../src/camera.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -std=gnu11 -MMD -MP -MF"src/camera.d" -MT"src/camera.o" -c -o "src/camera.o" "../src/camera.c"
In file included from ../src/camera.c:1:0:
../src/camera.h:10:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:11:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:12:17: error: field 'c2w' has incomplete type
     struct mat3 c2w;
                 ^~~
../src/camera.h:20:17: error: field 'origin' has incomplete type
     struct vec3 origin;
                 ^~~~~~
../src/camera.h:21:17: error: field 'dir' has incomplete type
     struct vec3 dir;
                 ^~~
../src/camera.h:29:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes);
                                                                 ^~~~
                                                                 _Bool
../src/camera.c:10:65: error: unknown type name 'bool'; did you mean '_Bool'?
 ray_t* get_ray_through_pixel(camera_t* cam, size_t x, size_t y, bool yes) {
                                                                 ^~~~
                                                                 _Bool
make: *** [src/subdir.mk:29: src/camera.o] Error 1
